<resources>
  <string name="app_name_release">BAZZ Movies</string>
  <string name="default_notification_channel_id">firebase_channel</string>
  <string name="notification_channel_name">Firebase Notification</string>
  <string name="poster">Poster</string>
  <string name="back">Back</string>
  <string name="stay_updated">Stay Updated</string>
  <string name="notification_description">We only send notifications for important app updates and bug fixes.</string>
  <string name="allow">Allow</string>
  <string name="not_now">Not now</string>
  <string name="notification_later">You can enable notifications later in settings</string>
  <string name="join_tmdb">Don\’t Have Account? Join TMDB</string>
  <string name="login">Login</string>
  <string name="text_login">text login</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="hide_unhide_password">hide or show password</string>
  <string name="please_enter_a_password">Please enter a password</string>
  <string name="please_enter_a_username">Please enter a username</string>
  <string name="guest_session"><u>Guest Session</u></string>
  <string name="retry">Retry</string>
  <string name="login_as_guest_successful">Login as Guest Successful</string>
  <string name="login_as_user_successful">Login Successful</string>
  <string name="no_browser_installed">"No browser installed"</string>
  <string name="title_home">Home</string>
  <string name="title_search">Search</string>
  <string name="title_more">More</string>
  <string name="title_favorite">Favorite</string>
  <string name="title_watchlist">Watchlist</string>
  <string name="tab_layout_explanation">change to featured, movie, or tv-series</string>
  <string name="something_went_wrong">Something Went Wrong</string>
  <string name="we_encountered_an_error_please_try_again">We encountered an error. Please try again.</string>
  <string name="try_again">Try Again</string>
  <string name="featured">Featured</string>
  <string name="trending">Trending</string>
  <string name="today">Today</string>
  <string name="this_week">This Week</string>
  <string name="upcoming_movies">Upcoming Movies</string>
  <string name="playing_now_on_theater">Playing now on Theater</string>
  <string name="movies">Movies</string>
  <string name="popular">Popular</string>
  <string name="now_playing">Now Playing</string>
  <string name="upcoming">Upcoming</string>
  <string name="top_rated">Top Rated</string>
  <string name="airing_today">Airing Today</string>
  <string name="airing_this_week">Airing This Week</string>
  <string name="tv_series">TV Series</string>
  <string name="asian">Asian</string>
  <string name="anime">Anime</string>
  <string name="this_season">This Season</string>
  <string name="all_time">All Time</string>
  <string name="costume_drama">Costume Drama</string>
  <string name="donghua">Donghua</string>
  <string name="reality_show">Reality Show</string>
  <string name="romance_drama">Romance Drama</string>
  <string name="no_trending">It seems there are no trending movies or series available in %1$s right now. Try selecting a different country to explore more options.</string>
  <string name="no_upcoming_movies">We couldn’t find any upcoming movies available in %1$s. Please try selecting a different country to explore options.</string>
  <string name="no_movies_currently_playing">We couldn’t find any movies currently playing in %1$s. Please try selecting a different country to see what\'s available.</string>
  <string name="no_popular_series">Looks like there aren’t any popular series available in %1$s right now. Try switching to a different country to find more options.</string>
  <string name="no_series_airing_today">It looks like there are no series airing today in %1$s. Try choosing a different country to discover more options.</string>
  <string name="no_series_airing_this_week">It seems there are no series scheduled to air this week in %1$s. Try selecting a different country to explore more options.</string>
  <string name="user_no_name">Name not set</string>
  <string name="guest_user">Guest User</string>
  <string name="image_profile">Image Profile</string>
  <string name="faq">FAQ</string>
  <string name="suggestion">Suggestion</string>
  <string name="open_suggestion">open suggestion</string>
  <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
  <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
  <string name="sign_out">Sign Out</string>
  <string name="sign_out_success">Sign Out Success</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="warning">Warning</string>
  <string name="all_data_deleted">Sign Out success, all data has been deleted</string>
  <string name="warning_signOut_guest_mode">You are currently logged in as a guest. All data, including your favorites and watchlist, will be deleted if you sign out. Do you want to continue?</string>
  <string name="warning_signOut_logged_user">Signing out will end your session. Are you sure you want to continue?</string>
  <string name="warning_restore_will_overwrite">Restore will overwrite the current database. Are you sure you want to continue?</string>
  <string name="backup">Backup</string>
  <string name="backup_success">Backup success</string>
  <string name="restore">Restore</string>
  <string name="restore_success">Restore success</string>
  <string name="select_region">Select Region</string>
  <string name="open_help">open help</string>
  <string name="open_about_us">open about us</string>
  <string name="about">About</string>
  <string name="about_text">BAZZ Movies app is for movie lovers. Hopefully it helps you easily to manage, discover, and enjoy your favorite movies.</string>
  <string name="tmdb_endorse">Important, BAZZ Movies uses the TMDB API but not endorsed or certified by TMDB.</string>
  <string name="search_results">Search results</string>
  <string name="last_search">Last Search</string>
  <string name="browse_by_genre">Browse by genre</string>
  <string name="genre_list">List of genre</string>
  <string name="search_any">Search Movie &amp; TV-series</string>
  <string name="clear_all">Clear All</string>
  <string name="history_search">History search</string>
  <string name="recent_searches">Recent searches</string>
  <string name="delete_search_history">delete this search history</string>
  <string name="explore_our_libraries">Explore TMDB libraries and start typing a movie, series or actor as you like</string>
  <string name="sorry_no_result">Sorry no result!</string>
  <string name="no_result_explanation">We cannot find item you are searching for, maybe a little mistake?</string>
  <string name="search_illustration">search illustration</string>
  <string name="apply">Apply</string>
  <string name="filter">Filter by</string>
  <string name="person">Person</string>
  <string name="movie">Movie</string>
  <string name="no_data_illustration">no data illustration</string>
  <string name="no_data_found">No data found!</string>
  <string name="no_data_explanation">We cannot find data you are looking for, maybe add favorite or watchlist first</string>
  <string name="toggle_list_layout">Switch to list view</string>
  <string name="toggle_grid_layout">Switch to grid view</string>
  <string name="backdrop_not_found">*Official backdrop has not been released yet</string>
  <string name="data_powered_by">*Data powered by</string>
  <string name="where_to_watch">Where to watch</string>
  <string name="no_watch_providers">No watch providers available</string>
  <string name="ads">Ads</string>
  <string name="buy">Buy</string>
  <string name="rent">Rent</string>
  <string name="free">Free</string>
  <string name="streaming">Streaming</string>
  <string name="justwatch">JustWatch</string>
  <string name="overview">Overview</string>
  <string name="more_information">More Information</string>
  <string name="no_overview">Theres no overview translated in English</string>
  <string name="watch_trailer">Watch Trailer</string>
  <string name="cast">Cast</string>
  <string name="crew">Crew</string>
  <string name="as">as</string>
  <string name="recommendation">Recommendation</string>
  <string name="cancel">Cancel</string>
  <string name="submit">Submit</string>
  <string name="view_all">View all</string>
  <string name="your_score">Your Score</string>
  <string name="your_rating">Your rating:</string>
  <string name="not_available">N/A</string>
  <string name="metascore">Metascore</string>
  <string name="imdb">IMDB</string>
  <string name="tmdb">TMDB</string>
  <string name="r_tomatoes">R. Tomatoes</string>
  <string name="tmdb_full">The Movie Database</string>
  <string name="part_of_the">Part of the</string>
  <string name="backdrop_collection">backdrop collection</string>
  <string name="status">Status</string>
  <string name="original_language">Original Language</string>
  <string name="keywords">Keywords</string>
  <string name="revenue">Revenue</string>
  <string name="budget">Budget</string>
  <string name="total_episodes">Total Episodes</string>
  <plurals name="episodes">
    <item quantity="one">%d episode</item>
    <item quantity="other">%d episodes</item>
  </plurals>
  <plurals name="seasons">
    <item quantity="one">%d season</item>
    <item quantity="other">%d seasons</item>
  </plurals>
  <string name="undo">Undo</string>
  <string name="already_watchlist">already in watchlist</string>
  <string name="already_favorite">already in favorite</string>
  <string name="remove_from_favorite">Remove from favorite</string>
  <string name="remove_from_watchlist">Remove from watchlist</string>
  <string name="added_to_favorite">has been added to favorite</string>
  <string name="added_to_watchlist">has been added to watchlist</string>
  <string name="removed_from_favorite">has been removed from favorite</string>
  <string name="removed_from_watchlist">has been removed from watchlist</string>
  <string name="item_added_to_favorite">Item added to favorite.</string>
  <string name="item_added_to_watchlist">Item added to watchlist.</string>
  <string name="item_removed_from_favorite">Item removed from favorite</string>
  <string name="item_removed_from_watchlist">Item removed from watchlist</string>
  <string name="no_data">No Data</string>
  <string name="add_to_favorite">add to favorite</string>
  <string name="add_to_watchlist">add to watchlist</string>
  <string name="picture">Picture</string>
  <string name="forget_password">Forget Password</string>
  <string name="sort">Sort</string>
  <string name="sort_by">Sort by</string>
  <string name="recently_added">Recently Added</string>
  <string name="oldest_added">Oldest Added</string>
  <string name="title_az">Title (A–Z)</string>
  <string name="title_za">Title (Z–A)</string>
  <string name="rating_desc">Rating (High to Low)</string>
  <string name="rating_asc">Rating (Low to High)</string>
  <string name="popularity_desc">Popularity (High to Low)</string>
  <string name="popularity_asc">Popularity (Low to High)</string>
  <string name="release_date_newest">Release Date (Newest First)</string>
  <string name="release_date_olders">Release Date (Oldest First)</string>
  <string name="known_for">Known For</string>
  <string name="biography">Biography</string>
  <string name="born">Born</string>
  <string name="day_of_death">Day of Death</string>
  <string name="years_old">years old</string>
  <string name="photos">Photos</string>
  <string name="read_more">Read More</string>
  <string name="read_less">Read Less</string>
  <string name="playing_as">Playing as</string>
  <string name="no_biography">No biography</string>
  <string name="actress_photo">actress photo</string>
  <string name="close">close</string>
  <string name="open_actor_actress_instagram_page">open actor/actress Instagram page</string>
  <string name="open_actor_x_account">open actor/actress X account</string>
</resources>