<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/navigation_home"
    android:icon="@drawable/ic_home_selector"
    android:title="@string/title_home" />

  <item
    android:id="@+id/navigation_search"
    android:icon="@drawable/ic_search"
    android:title="@string/title_search" />

  <item
    android:id="@+id/navigation_favorite"
    android:icon="@drawable/ic_favorite_selector"
    android:title="@string/title_favorite" />

  <item
    android:id="@+id/navigation_watchlist"
    android:icon="@drawable/ic_watchlist_selector"
    android:title="@string/title_watchlist" />

  <item
    android:id="@+id/navigation_more"
    android:icon="@drawable/ic_more_selector"
    android:title="@string/title_more" />

</menu>