<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:id="@+id/ic_general_errror"
      android:layout_width="220dp"
      android:layout_height="220dp"
      android:layout_gravity="center"
      android:adjustViewBounds="true"
      android:contentDescription="@string/something_went_wrong"
      android:padding="0dp"
      android:src="@drawable/ic_general_error"
      android:visibility="gone"
      app:layout_constraintDimensionRatio="1:1"
      tools:visibility="visible" />

    <TextView
      android:id="@+id/tv_header_no_data"
      style="@style/TextHeader1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="8dp"
      android:text="@string/something_went_wrong" />

    <TextView
      android:id="@+id/tv_no_data"
      style="@style/TextDivider"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/we_encountered_an_error_please_try_again"
      app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_try_again"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="4dp"
      android:backgroundTint="@color/yellow"
      android:fontFamily="@font/nunito_sans_bold"
      android:text="@string/try_again"
      android:textAllCaps="false"
      android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
      android:textColor="@color/gray" />
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>