<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.listitem.ListItemLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/list_item_layout"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <!-- LEFT RevealableListItem - Swipe RIGHT to reveal (Delete action) -->
  <com.google.android.material.listitem.ListItemRevealLayout
    android:id="@+id/reveal_layout_start"
    style="@style/ListItemRevealLayout.Start">

    <Button
      android:id="@+id/btn_delete"
      style="@style/ListItemReveal.Button.Start"
      android:contentDescription="@string/remove_from_watchlist" />

  </com.google.android.material.listitem.ListItemRevealLayout>

  <!-- Main content -->
  <com.google.android.material.listitem.ListItemCardView
    android:id="@+id/container_result"
    style="@style/ListItemCardView">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <!-- Poster movie/tv -->
      <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_picture"
        style="@style/Widget.Material3.ShapeableImageView.ListItem.LeadingImage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/picture"
        app:shapeAppearanceOverlay="@style/roundedCornersImageView"
        tools:layout_height="100dp"
        tools:src="@color/red_matte" />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <!-- Name/title -->
        <TextView
          android:id="@+id/tv_title"
          style="@style/TextHeader3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:ellipsize="end"
          android:maxLines="2"
          app:layout_constrainedWidth="true"
          tools:text="Avenger Endgame" />

        <!-- Released year/department-->
        <TextView
          android:id="@+id/tv_year_released"
          style="@style/TextDivider"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="6dp"
          tools:text="2021" />

        <!-- Genre/playing as -->
        <TextView
          android:id="@+id/tv_genre"
          style="@style/TextDivider"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="6dp"
          android:ellipsize="end"
          android:maxLines="1"
          app:layout_constrainedWidth="true"
          tools:text="Action, Adventure, Superhero, MCU, Sci-fi" />

      </LinearLayout>
    </LinearLayout>
  </com.google.android.material.listitem.ListItemCardView>

  <!-- RIGHT RevealableListItem - Swipe LEFT to reveal (Add to Watchlist action) -->
  <com.google.android.material.listitem.ListItemRevealLayout
    android:id="@+id/reveal_layout_end"
    style="@style/ListItemRevealLayout.End">

    <Button
      android:id="@+id/btn_watchlist"
      style="@style/ListItemReveal.Button.End"
      android:contentDescription="@string/add_to_favorite"
      app:icon="@drawable/ic_hearth" />

  </com.google.android.material.listitem.ListItemRevealLayout>
</com.google.android.material.listitem.ListItemLayout>